# px_omnisharing_dataprocess_kit

./: BINARY_LICENSE.md  LICENSE.md  README.md
dataset/: LICENSE.md
px_hand_pose/: README.md
px_hand_pose/iinet/: .gitignore  .gitmodules  onnx2trt.py  options.py  pt2onnx.py  requirements.txt
px_hand_pose/main/: bimanual_pose.sh  exp_bimanual_pose.sh  generate_foundationstereo_intrinsic.py  generate_glove_in.py  parse_hdf5_vis.py  pose_smooth_v3.py  visualize_pose.py
px_hand_pose/utils/: .gitignore
px_replay/: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  env.sh  pyproject.toml  requirements.txt
px_replay/asset/: work_bench.usd
px_replay/src/px_replay/: __init__.py
px_replay/src/px_replay/config/: config_scene.yaml  congfig_two_tora.yaml  paths.py
px_replay/src/px_replay/dataprocess/tactile/: adapters_DataGlove.py  adapters_Dexh13.py  device_factory.py  device_interfaces.py  device_manager.py  tactile_ForceFieldGenerator.py
px_replay/src/px_replay/robot/: __init__.py
px_replay/src/px_replay/robot/DexH13/: DexH13_left_new.py  DexH13_left_new.urdf  DexH13_left_new.usd  DexH13_right_new.py  DexH13_right_new.urdf  DexH13_right_new.usd
px_replay/src/px_replay/robot/DexH13/tactile_data/: grid_coords.json  grid_coords.msgpack  write_grid_coords_to_json.py
px_replay/visual_scripts/phase_1/: parse_videos.py
px_replay/visual_scripts/phase_2/: IsaacSim_DH13_action.py  IsaacSim_replay_utils.py  visualization_data_sender.py
px_retargeting/: README.md  env.sh  install.sh  px_retargeting-1.1.0-cp310-cp310-linux_x86_64.whl
(+178 files in other folders)
